--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,59 @@
 @import './scss/all';
+
+#toast {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background: rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.hide {
+    display: none;
+    opacity: 0;
+  }
+
+  & > div.inner-content {
+    min-height: 80px;
+    width: 200px;
+    background: #fff;
+    color: darkred;
+    border-radius: 20px;
+    padding: 12px 20px;
+    text-align: center;
+    vertical-align: middle;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
+    p#selectRegon {
+      font-size: 22px;
+      word-break: break-all;
+    }
+
+    span {
+      padding-bottom: 12px;
+    }
+  }
+}
+
+svg {
+  border: 1px solid #ccc;
+}
+
+.area_overlay {
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  &:hover {
+    fill: coral;
+    stroke: darkcyan;
+    opacity: 1;
+  }
+}
